adding in additional comments

--- a/band_members_over_time.ipynb
+++ b/band_members_over_time.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1174,
+   "execution_count": 1,
    "id": "2397ad25-1aea-49f0-a221-9aa2c14ab15d",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 817,
+   "execution_count": 2,
    "id": "475226b8-795a-46fa-8617-685abcaa3a7a",
    "metadata": {
     "tags": []
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 818,
+   "execution_count": 3,
    "id": "3e9966cd-606b-4625-bc72-df6e5910668e",
    "metadata": {
     "tags": []
@@ -114,13 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 819,
+   "execution_count": 6,
    "id": "6ff42241-d328-4b10-a299-08aa7ca61f1b",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -175,170 +171,34 @@
        "      <td>The Absence Of Presence</td>\n",
        "      <td>2020-07-17</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>The Absence of Presence</td>\n",
-       "      <td>2020-07-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Wheels and Other Rarities</td>\n",
-       "      <td>2018-11-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Leftoverture Live &amp; Beyond</td>\n",
-       "      <td>2017-11-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>The Prelude Implicit</td>\n",
-       "      <td>2016-09-23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>The Prelude Implicit (Deluxe Edition)</td>\n",
-       "      <td>2016-09-23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Freaks of Nature</td>\n",
-       "      <td>2012-07-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>There's Know Place Like Home</td>\n",
-       "      <td>2009-10-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Somewhere To Elsewhere</td>\n",
-       "      <td>2000-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Always Never The Same</td>\n",
-       "      <td>1998-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Live at the Whisky</td>\n",
-       "      <td>1993-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>In The Spirit Of Things</td>\n",
-       "      <td>1988-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Power</td>\n",
-       "      <td>1986-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Drastic Measures</td>\n",
-       "      <td>1983-07-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Vinyl Confessions</td>\n",
-       "      <td>1982-06-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Audio-Visions</td>\n",
-       "      <td>1980-09-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Monolith</td>\n",
-       "      <td>1979-05-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Two For The Show (30th Anniversary Edition)</td>\n",
-       "      <td>1978-10-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Point Of Know Return (Expanded Edition)</td>\n",
-       "      <td>1977-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Leftoverture (Expanded Edition)</td>\n",
-       "      <td>1976-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Masque (Expanded Edition)</td>\n",
-       "      <td>1975-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Song For America (Expanded Edition)</td>\n",
-       "      <td>1975-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Kansas (Expanded Edition)</td>\n",
-       "      <td>1974-01-01</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                album release_date\n",
-       "0                         Nothing To Lose (Live 1984)   2021-11-03\n",
-       "1                  Point Of Know Return Live & Beyond   2021-05-28\n",
-       "2              Talk To The Wind (Live In Chicago '76)   2020-12-04\n",
-       "3   Beyond The Illusion (The 1980 New York Broadca...   2020-07-31\n",
-       "4                             The Absence Of Presence   2020-07-17\n",
-       "5                             The Absence of Presence   2020-07-17\n",
-       "6                           Wheels and Other Rarities   2018-11-30\n",
-       "7                          Leftoverture Live & Beyond   2017-11-03\n",
-       "8                                The Prelude Implicit   2016-09-23\n",
-       "9               The Prelude Implicit (Deluxe Edition)   2016-09-23\n",
-       "10                                   Freaks of Nature   2012-07-17\n",
-       "11                       There's Know Place Like Home   2009-10-13\n",
-       "12                             Somewhere To Elsewhere   2000-01-01\n",
-       "13                              Always Never The Same   1998-01-01\n",
-       "14                                 Live at the Whisky   1993-01-01\n",
-       "15                            In The Spirit Of Things   1988-01-01\n",
-       "16                                              Power   1986-01-01\n",
-       "17                                   Drastic Measures   1983-07-01\n",
-       "18                                  Vinyl Confessions   1982-06-01\n",
-       "19                                      Audio-Visions   1980-09-01\n",
-       "20                                           Monolith   1979-05-01\n",
-       "21        Two For The Show (30th Anniversary Edition)   1978-10-01\n",
-       "22            Point Of Know Return (Expanded Edition)   1977-01-01\n",
-       "23                    Leftoverture (Expanded Edition)   1976-01-01\n",
-       "24                          Masque (Expanded Edition)   1975-01-01\n",
-       "25                Song For America (Expanded Edition)   1975-01-01\n",
-       "26                          Kansas (Expanded Edition)   1974-01-01"
+       "                                               album release_date\n",
+       "0                        Nothing To Lose (Live 1984)   2021-11-03\n",
+       "1                 Point Of Know Return Live & Beyond   2021-05-28\n",
+       "2             Talk To The Wind (Live In Chicago '76)   2020-12-04\n",
+       "3  Beyond The Illusion (The 1980 New York Broadca...   2020-07-31\n",
+       "4                            The Absence Of Presence   2020-07-17"
       ]
      },
-     "execution_count": 819,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "albums_df.release_date = pd.to_datetime(albums_df.release_date)\n",
-    "albums_df"
+    "albums_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 820,
+   "execution_count": 5,
    "id": "317b58e1-1ca0-4cdb-9f33-f13949671d18",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -385,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1176,
+   "execution_count": 7,
    "id": "54b3fe5a-62fe-4edf-820c-956f9efcf28a",
    "metadata": {},
    "outputs": [
@@ -426,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1179,
+   "execution_count": 8,
    "id": "64bbe2f1-70e7-4cd1-a058-14cff38e5d80",
    "metadata": {},
    "outputs": [
@@ -457,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1181,
+   "execution_count": 9,
    "id": "122c33ae-1cd7-41bc-be98-40639f1bafd0",
    "metadata": {},
    "outputs": [
@@ -482,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1184,
+   "execution_count": 10,
    "id": "44c8878e-a872-4ae7-b6ba-ecfd424ff597",
    "metadata": {},
    "outputs": [],
@@ -493,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1185,
+   "execution_count": 11,
    "id": "b881b678-c541-44d1-a162-42be101f0cb5",
    "metadata": {},
    "outputs": [
@@ -521,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1186,
+   "execution_count": 12,
    "id": "8e58b97d-355e-4c4c-abf0-22aa1c1c90a3",
    "metadata": {},
    "outputs": [],
@@ -537,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1189,
+   "execution_count": 13,
    "id": "6e7a31a5-94e1-4031-af5e-08c531435537",
    "metadata": {},
    "outputs": [],
@@ -549,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1194,
+   "execution_count": 14,
    "id": "bf2b3aa1-8f76-410f-bcd0-c0214e9f692d",
    "metadata": {},
    "outputs": [],
@@ -569,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1234,
+   "execution_count": 15,
    "id": "73dbebf0-7ec7-4b81-952b-f8dd424b96cf",
    "metadata": {},
    "outputs": [],
@@ -583,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1235,
+   "execution_count": 16,
    "id": "ec15e9d0-bdbb-4d7e-bd6a-fab2bf027a6b",
    "metadata": {},
    "outputs": [
@@ -761,7 +621,7 @@
        "9                 none  – two live performances only   Former  "
       ]
      },
-     "execution_count": 1235,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1430,
+   "execution_count": 17,
    "id": "7ee4269c-c5c6-4240-adf1-ac6e311fb52f",
    "metadata": {},
    "outputs": [
@@ -872,7 +732,7 @@
        "4                                   [2012–present]  "
       ]
      },
-     "execution_count": 1430,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,22 +751,6 @@
     "\n",
     "df.head(5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42921339-212a-46a1-bab0-a6672b5bf315",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b73d2d9e-379c-448b-a93b-8c8569fe5a72",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -960,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1433,
+   "execution_count": 18,
    "id": "1b367772-c837-4d3f-8447-a7e868fbf175",
    "metadata": {},
    "outputs": [],
@@ -974,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1434,
+   "execution_count": 19,
    "id": "86e4de39-d092-4c47-b72f-ff8f0f8b4b65",
    "metadata": {},
    "outputs": [
@@ -1008,7 +852,7 @@
        " '2014–2015']"
       ]
      },
-     "execution_count": 1434,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1435,
+   "execution_count": 20,
    "id": "790a3a65-3c42-4db4-9044-228e20c9b08b",
    "metadata": {},
    "outputs": [
