--- a/sql_local_queries_examples.ipynb
+++ b/sql_local_queries_examples.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "b748f4f4-a64b-45db-b48d-16348f3bceae",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "4ae8fbdc-e21e-4e96-916c-b073209da58b",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "f3904fa5-79a7-484b-9369-f0314c5fcff7",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "3f59b9e4-a60c-484c-8ee6-c821026ca7f1",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "4     The Winter's Tale  1610       24914    late"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "aa262a84-092a-4395-a7be-59647cf0dd7c",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
        "4         p   6181.800000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "0e36585b-d6a9-45c8-b8a2-9a299f6442ca",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
        "0  Ay, so, God b' wi' ye!                        ...  hamlet      466.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "36683f93-0b12-4e84-8479-d36ed7a172e9",
    "metadata": {},
    "outputs": [
@@ -537,7 +537,7 @@
        "[7998 rows x 5 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "6c03a19f-5bde-4d35-8e21-c2250fcd89a1",
    "metadata": {},
    "outputs": [
@@ -714,7 +714,7 @@
        "[342 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "3603e7d5-8708-48f5-a369-8c04ec9de6ca",
    "metadata": {},
    "outputs": [
@@ -818,7 +818,7 @@
        "4       The Winter's Tale         c  1610"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "7d673a22-9b41-4c0b-a5d2-e41f0d5a09fc",
    "metadata": {},
    "outputs": [
@@ -950,7 +950,7 @@
        "4     1981      NaN         NaN        NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,17 +963,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "06a5452e-53bd-452f-b893-5733a5cae79b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x19475bcc0c0>"
+       "<pymongo.results.DeleteResult at 0x234436fc580>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "495d0eb7-c63f-4ba4-afdc-26d95564c301",
    "metadata": {},
    "outputs": [
@@ -1002,7 +1002,7 @@
        "145"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "a1b14025-c040-407d-b137-c6d0ba8c91cb",
    "metadata": {},
    "outputs": [
@@ -1088,7 +1088,7 @@
        "4  Bosnia and Herzegovina     1995   0.338267"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "7b6bcda4-0fdb-49af-9db3-51f4424412fe",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1151,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>61d392649a361c376f0fe629</td>\n",
+       "      <td>61d3bd98cbad9b701fc37fda</td>\n",
        "      <td>'Hungary 2011 (rev. 2013)     Preamble    \\nGo...</td>\n",
        "      <td>Hungary</td>\n",
        "      <td>2011</td>\n",
@@ -1165,7 +1165,7 @@
       ],
       "text/plain": [
        "                        _id  \\\n",
-       "0  61d392649a361c376f0fe629   \n",
+       "0  61d3bd98cbad9b701fc37fda   \n",
        "\n",
        "                                                text  country  adopted  \\\n",
        "0  'Hungary 2011 (rev. 2013)     Preamble    \\nGo...  Hungary     2011   \n",
@@ -1174,7 +1174,7 @@
        "0   2013.0       None        0.4  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "60eef6c3-e8a7-4220-ad1b-4c2888e69eac",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1301,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR! Session/line number was not unique in database. History logging moved to new session 1021\n"
+      "ERROR! Session/line number was not unique in database. History logging moved to new session 1040\n"
      ]
     },
     {
@@ -1338,7 +1338,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>61d392649a361c376f0fe668</td>\n",
+       "      <td>61d3bd98cbad9b701fc38019</td>\n",
        "      <td>'Serbia 2006     Preamble    \\nConsidering the...</td>\n",
        "      <td>Serbia</td>\n",
        "      <td>2006</td>\n",
@@ -1349,7 +1349,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>61d392649a361c376f0fe620</td>\n",
+       "      <td>61d3bd98cbad9b701fc37fd1</td>\n",
        "      <td>'Finland 1999 (rev. 2011)     Chapter 1. Funda...</td>\n",
        "      <td>Finland</td>\n",
        "      <td>1999</td>\n",
@@ -1360,7 +1360,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>61d392649a361c376f0fe61d</td>\n",
+       "      <td>61d3bd98cbad9b701fc37fce</td>\n",
        "      <td>'Estonia 1992 (rev. 2011)     Preamble    \\nWi...</td>\n",
        "      <td>Estonia</td>\n",
        "      <td>1992</td>\n",
@@ -1371,7 +1371,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>61d392649a361c376f0fe5fc</td>\n",
+       "      <td>61d3bd98cbad9b701fc37fad</td>\n",
        "      <td>'Armenia 1995 (rev. 2005)     Preamble    \\nTh...</td>\n",
        "      <td>Armenia</td>\n",
        "      <td>1995</td>\n",
@@ -1382,7 +1382,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>61d392649a361c376f0fe5f8</td>\n",
+       "      <td>61d3bd98cbad9b701fc37fa9</td>\n",
        "      <td>'Albania 1998 (rev. 2012)     Preamble    \\nWe...</td>\n",
        "      <td>Albania</td>\n",
        "      <td>1998</td>\n",
@@ -1397,11 +1397,11 @@
       ],
       "text/plain": [
        "                        _id  \\\n",
-       "0  61d392649a361c376f0fe668   \n",
-       "1  61d392649a361c376f0fe620   \n",
-       "2  61d392649a361c376f0fe61d   \n",
-       "3  61d392649a361c376f0fe5fc   \n",
-       "4  61d392649a361c376f0fe5f8   \n",
+       "0  61d3bd98cbad9b701fc38019   \n",
+       "1  61d3bd98cbad9b701fc37fd1   \n",
+       "2  61d3bd98cbad9b701fc37fce   \n",
+       "3  61d3bd98cbad9b701fc37fad   \n",
+       "4  61d3bd98cbad9b701fc37fa9   \n",
        "\n",
        "                                                text  country  adopted  \\\n",
        "0  'Serbia 2006     Preamble    \\nConsidering the...   Serbia     2006   \n",
@@ -1418,7 +1418,7 @@
        "4   2012.0         NaN   0.535111  5.023087  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "1a5bbef0-f98d-410b-b436-ebad96dc605f",
    "metadata": {},
    "outputs": [],
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "baaea361-da14-49cf-8606-be3f1a06ce05",
    "metadata": {},
    "outputs": [
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "a4cb20aa-e4a1-45a6-ad47-158938ad95ac",
    "metadata": {},
    "outputs": [],
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "b7a3b232-f42c-4982-8b7d-779b476858b1",
    "metadata": {},
    "outputs": [
@@ -1530,18 +1530,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 20,
    "id": "4bbff552-269d-44dc-8b5d-b519393b783e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR! Session/line number was not unique in database. History logging moved to new session 1038\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "music_cursor.execute('SELECT * FROM reviews')\n",
     "\n",
@@ -1553,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 21,
    "id": "a551af91-ebbd-4adb-ada8-06617e82f839",
    "metadata": {},
    "outputs": [
@@ -1568,7 +1560,7 @@
        " ('years',)]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1581,83 +1573,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a0505b86-6bd1-4972-b3d2-293d8fa42549",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n",
-      "ERROR:root:Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n",
-      "ERROR:root:Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sqlite3.ProgrammingError: Cannot operate on a closed database.\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AttributeError: 'ProgrammingError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AssertionError\n",
-      "sqlite3.ProgrammingError: Cannot operate on a closed database.\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AttributeError: 'ProgrammingError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AttributeError: 'TypeError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AssertionError\n",
-      "sqlite3.ProgrammingError: Cannot operate on a closed database.\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AttributeError: 'ProgrammingError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AttributeError: 'TypeError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AttributeError: 'TypeError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AssertionError\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "music_db.commit()\n",
     "music_db.close()"
