--- a/r_middle_school_analysis/middle_school_analysis.rmd
+++ b/r_middle_school_analysis/middle_school_analysis.rmd
@@ -1,5 +1,5 @@
 ---
-title: "achievement_first_technical_exercise.rmd"
+title: "middle_school_analysis.rmd"
 author: "Drake Wagner"
 date: "6/26/2020"
 output: pdf_document
