db access updates

--- a/sql_local_queries_examples.ipynb
+++ b/sql_local_queries_examples.ipynb
@@ -38,14 +38,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7ade236a-4fee-4328-9252-af9caa58828d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "4ae8fbdc-e21e-4e96-916c-b073209da58b",
    "metadata": {},
@@ -970,7 +962,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x234436fc580>"
+       "<pymongo.results.DeleteResult at 0x21954e7b640>"
       ]
      },
      "execution_count": 11,
@@ -1151,7 +1143,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>61d3bd98cbad9b701fc37fda</td>\n",
+       "      <td>61e4aece6860754c7caac1fd</td>\n",
        "      <td>'Hungary 2011 (rev. 2013)     Preamble    \\nGo...</td>\n",
        "      <td>Hungary</td>\n",
        "      <td>2011</td>\n",
@@ -1165,7 +1157,7 @@
       ],
       "text/plain": [
        "                        _id  \\\n",
-       "0  61d3bd98cbad9b701fc37fda   \n",
+       "0  61e4aece6860754c7caac1fd   \n",
        "\n",
        "                                                text  country  adopted  \\\n",
        "0  'Hungary 2011 (rev. 2013)     Preamble    \\nGo...  Hungary     2011   \n",
@@ -1195,81 +1187,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "9b69754f-a1f4-4ee4-b5bb-18f2d4326b90",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n",
-      "ERROR:root:Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n",
-      "ERROR:root:Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NameError: name 'mongo_read_query' is not defined\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AttributeError: 'NameError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AssertionError\n",
-      "NameError: name 'mongo_read_query' is not defined\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AttributeError: 'NameError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AttributeError: 'TypeError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AssertionError\n",
-      "NameError: name 'mongo_read_query' is not defined\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AttributeError: 'NameError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AttributeError: 'TypeError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "TypeError: object of type 'NoneType' has no len()\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AttributeError: 'TypeError' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "AssertionError\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>adopted</th>\n",
+       "      <th>democracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Slovenia</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>0.861380</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Poland</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>0.682208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Eritrea</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>0.075621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Croatia</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>0.710922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Macedonia (The former Yugoslav Republic of)</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>0.510983</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       country  adopted  democracy\n",
+       "0                                     Slovenia     1991   0.861380\n",
+       "1                                       Poland     1997   0.682208\n",
+       "2                                      Eritrea     1997   0.075621\n",
+       "3                                      Croatia     1991   0.710922\n",
+       "4  Macedonia (The former Yugoslav Republic of)     1991   0.510983"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1284,7 +1278,7 @@
     "    return query_df\n",
     "\n",
     "constcollection.create_index([('text', 'text')])\n",
-    "df = mongo_read_query(constcollection, \n",
+    "df = read_mongo_query(constcollection, \n",
     "                      {'$text': {'$search':'\\\"freedom of speech\\\"',\n",
     "                                 '$caseSensitive': False}}) \\\n",
     "                     [['country', 'adopted', 'democracy']]\n",
@@ -1293,17 +1287,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "60eef6c3-e8a7-4220-ad1b-4c2888e69eac",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR! Session/line number was not unique in database. History logging moved to new session 1040\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1338,7 +1325,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>61d3bd98cbad9b701fc38019</td>\n",
+       "      <td>61e4aece6860754c7caac23c</td>\n",
        "      <td>'Serbia 2006     Preamble    \\nConsidering the...</td>\n",
        "      <td>Serbia</td>\n",
        "      <td>2006</td>\n",
@@ -1349,7 +1336,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>61d3bd98cbad9b701fc37fd1</td>\n",
+       "      <td>61e4aece6860754c7caac1f4</td>\n",
        "      <td>'Finland 1999 (rev. 2011)     Chapter 1. Funda...</td>\n",
        "      <td>Finland</td>\n",
        "      <td>1999</td>\n",
@@ -1360,7 +1347,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>61d3bd98cbad9b701fc37fce</td>\n",
+       "      <td>61e4aece6860754c7caac1f1</td>\n",
        "      <td>'Estonia 1992 (rev. 2011)     Preamble    \\nWi...</td>\n",
        "      <td>Estonia</td>\n",
        "      <td>1992</td>\n",
@@ -1371,7 +1358,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>61d3bd98cbad9b701fc37fad</td>\n",
+       "      <td>61e4aece6860754c7caac1d0</td>\n",
        "      <td>'Armenia 1995 (rev. 2005)     Preamble    \\nTh...</td>\n",
        "      <td>Armenia</td>\n",
        "      <td>1995</td>\n",
@@ -1382,7 +1369,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>61d3bd98cbad9b701fc37fa9</td>\n",
+       "      <td>61e4aece6860754c7caac1cc</td>\n",
        "      <td>'Albania 1998 (rev. 2012)     Preamble    \\nWe...</td>\n",
        "      <td>Albania</td>\n",
        "      <td>1998</td>\n",
@@ -1397,11 +1384,11 @@
       ],
       "text/plain": [
        "                        _id  \\\n",
-       "0  61d3bd98cbad9b701fc38019   \n",
-       "1  61d3bd98cbad9b701fc37fd1   \n",
-       "2  61d3bd98cbad9b701fc37fce   \n",
-       "3  61d3bd98cbad9b701fc37fad   \n",
-       "4  61d3bd98cbad9b701fc37fa9   \n",
+       "0  61e4aece6860754c7caac23c   \n",
+       "1  61e4aece6860754c7caac1f4   \n",
+       "2  61e4aece6860754c7caac1f1   \n",
+       "3  61e4aece6860754c7caac1d0   \n",
+       "4  61e4aece6860754c7caac1cc   \n",
        "\n",
        "                                                text  country  adopted  \\\n",
        "0  'Serbia 2006     Preamble    \\nConsidering the...   Serbia     2006   \n",
@@ -1418,7 +1405,7 @@
        "4   2012.0         NaN   0.535111  5.023087  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "1a5bbef0-f98d-410b-b436-ebad96dc605f",
    "metadata": {},
    "outputs": [],
@@ -1462,18 +1449,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "baaea361-da14-49cf-8606-be3f1a06ce05",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100% [........................................................................] 83585024 / 83585024"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# read in files\n",
     "\n",
@@ -1487,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "a4cb20aa-e4a1-45a6-ad47-158938ad95ac",
    "metadata": {},
    "outputs": [],
@@ -1502,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "b7a3b232-f42c-4982-8b7d-779b476858b1",
    "metadata": {},
    "outputs": [
@@ -1510,7 +1489,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\dwagn\\appdata\\local\\programs\\python\\python39\\lib\\site-packages\\pandas\\core\\generic.py:2779: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
+      "C:\\Users\\dwagn\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\generic.py:2779: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
       "  sql.to_sql(\n"
      ]
     }
@@ -1530,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "4bbff552-269d-44dc-8b5d-b519393b783e",
    "metadata": {},
    "outputs": [],
@@ -1545,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "a551af91-ebbd-4adb-ada8-06617e82f839",
    "metadata": {},
    "outputs": [
@@ -1560,7 +1539,7 @@
        " ('years',)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1573,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "a0505b86-6bd1-4972-b3d2-293d8fa42549",
    "metadata": {},
    "outputs": [],
@@ -1581,22 +1560,6 @@
     "music_db.commit()\n",
     "music_db.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec213064-3919-43ad-83ac-301d566e2921",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26cff1d3-5a56-4d56-a993-aab36c09cbfe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
